# BPMsolver

./: .gitignore  BPM.cpp  BPM.h  CMakeLists.txt  CNsolve.cpp  CNsolve.h  README.md  bandMulti.cpp  band_multi.cpp  band_multi.h  bpm.sln  bpm.vcxproj  bpm.vcxproj.filters  bpm_class.cpp  bpm_class.h  cn_solve.h.cpp  common.h  dxdx.cpp  dxdx.h  dxdxbase.cpp  dxdxbase.h  dxdxfunc.cpp  dxdxfunc.h  dxdy.h  dxdybase.cpp  dxdybase.h  dxdyfunc.cpp  dxdyfunc.h  dydx.h  dydxbase.cpp  dydxbase.h  dydxfunc.cpp  dydxfunc.h  dydy.h  dydybase.cpp  dydybase.h  dydyfunc.cpp  dydyfunc.h  loadHDF5.cpp  load_hdf5.cpp  (+11 more)
MatrixOperator/: dxdx.cpp  dxdx.h  dxdy.cpp  dxdy.h  dydx.cpp  dydx.h  dydy.cpp  dydy.h  matrixHeader.h  test.h
MatrixOperator/dxdx/: dxdx.cpp  dxdx.h  dxdxbase.cpp  dxdxbase.h
MatrixOperator/dxdy/: dxdy.cpp  dxdy.h  dxdybase.cpp  dxdybase.h
MatrixOperator/dydx/: dydx.cpp  dydx.h  dydxbase.cpp  dydxbase.h
MatrixOperator/dydy/: dydy.cpp  dydy.h  dydybase.cpp  dydybase.h
function/: Thomas.cpp  Thomas.h  commom.h  loadHDF5.cpp  loadHDF5.h
include/: cn_solve.h  dxdxfunc.h  dxdyfunc.h  thomas.h
lumerical/: bpmOut.h5  showhdf5.m  test.py  testfile.h5  ybrach.lsf
matlab/: dxdx.m  dxdy.m  dydx.m  dydy.m
sim/: BPM.cpp  BPM.h  Device.cpp  Device.h  bpmOneSetp.cpp  bpmOneSetp.h
src/: band_multi.cpp  bpm_class.cpp  cn_solve.h.cpp  dxdxfunc.cpp  dxdyfunc.cpp  dydxfunc.cpp  dydyfunc.cpp  load_hdf5.cpp  main.cpp  test_thomas.cpp  thomas.cpp
